// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`correct value should be verified 1`] = `
[
  {
    "id": "ADDRESS",
    "kind": "address",
    "properties": {},
    "title": "address.test",
    "value": {
      "address1": "address1",
      "city": "city",
      "country": "country",
      "state": "state",
      "zip": "zip",
    },
  },
]
`;

exports[`undefined value should be verified if not required 1`] = `
[
  {
    "id": "ADDRESS",
    "kind": "address",
    "properties": {},
    "title": "address.test",
    "value": "",
  },
]
`;
